--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "CI='' yarn run build"
+    "build": "yarn run build"
   },
   "eslintConfig": {
     "extends": [
