--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "healthshoper",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gitname.github.io/healthshoper",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -28,9 +29,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "yarn run build"
+    "predeploy": "CI='' npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
