--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "healthshoper",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gitname.github.io/healthshoper",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -29,10 +28,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "CI='' npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
