--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -23,6 +24,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
